# dorustos

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: backend.rs  frontend.rs  main.rs
